flask-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-app
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  strategy: {}
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - image: opeomotayo/flask-image:46
        name: flask-app
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: flask-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-app
