flask-manifest/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: flask-service
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-app
