flask-manifest/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: flask
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/backend-protocol: "https"
spec:
  rules:
  - host: flask.opeomotayo.net
    http:
      paths:
      - backend:
          service:
            name: flask-service
            port:
              number: 80
        path: /
        pathType: Prefix
